2007-02-18  Dmitry Xmelkov  <dmix@gmail.ru>

	STD and FLT vfprintf parts are fully rewriten to reduce size
	and increase speed. So a set of changes are maiden:
	* common/ntz.h: New file.
	* common/ftoa_engine.h: Move from libc/stdlib/.
	* libc/stdlib/ftoa_engine.h: Move to common/.
	* libc/pmstring/strchr_P.S: New file.
	* libc/pmstring/Files.am: Add new source file strchr_P.S
	* include/avr/pgmspace.h: Add new function strchr_P().
	* libc/stdio/xtoa_fast.h: New file.
	* libc/stdio/ultoa_invert.S: New file.
	* libc/stdio/Files.am: Add new source file ultoa_invert.S
	* libc/stdio/vfprintf.c: Parts STD and FLT are fully rewriten.
	* tests/simulate/printf: New directory.
	* tests/simulate/printf/{sprintf-1,sprintf-2,sprintf-3,sprintf-4,
	sprintf-5,sprintf_flt-big,sprintf_flt-e01,sprintf_flt-f01,
	sprintf_flt-g01,sprintf_flt-g02,sprintf_flt-nan}.c: New files.

2007-02-07  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/stdlib/{strtoul-1.c,strtoul-2.c,strtoul-3.c,
	strtoul.h}: New files.

2007-02-06  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/runtest.sh: Add option to stop after error. Add
	string/*.c to the list. Compile(): small correction.
	* tests/simulate/progmem.h: Add memcpy_P emulation.
	* tests/simulate/stdlib/{atol-2,bsearch-1,bsearch-2,bsearch-3,
	dtostre-01,dtostre-02,dtostre-03,dtostre-04,dtostre-05,dtostre-06,
	dtostre-expm00,dtostre-minmax,dtostre-nans,dtostre-subnrm,
	dtostre-zero,dtostrf-01,dtostrf-big,dtostrf-minmax,dtostrf-nans,
	dtostrf-round,dtostrf-width,strtol-1,strtol-2,strtol-3,
	strtol-4}.c: New files.
	* tests/simulate/string: New directory.
	* tests/simulate/string/{ffs-1,ffsl-1,ffsll-1}.c: New files.

2007-02-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Add some explanation how to convert raw binary
	data so they can be linked into the image.

2007-02-05  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/atoi.S: Fix bug #18899: atoi and atol do not handle
	vertical tab properly. Reduce program size considarably.