@@ -1,3 +1,9 @@
+2007-02-18  Anatoly Sokolov <aesok@post.ru>
+
+	* include/avr/iotnx61.h (PCMSK0): Set address to 0x23.
+	(PCMSK1): Set address to 0x22.
+	Fix bug #19060: PCMSKx registers transposed in header for attinyX61
+
 2007-02-18  Dmitry Xmelkov  <dmix@gmail.ru>
 
 	STD and FLT vfprintf parts are fully rewriten to reduce size
